prevent stretch over to neighbours but not drag over todo in reducer

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -67,7 +67,6 @@ html{
     background:cyan;
     border:solid black 1px;
     white-space: nowrap;
-    display:flex;
     position:relative;
     width:100%;
     height:70px;
@@ -82,7 +81,8 @@ html{
 .ToolField{
     width:min-content;
     display:inline-block;
-    width: 12rem;
+    width: 100px;
+    position: sticky;
 }
 .AudioField{
     position: relative;
@@ -131,13 +131,29 @@ html{
 }
 .Timeline{
     position:relative;
-    border:solid black 1px;
     width:max-content;
     white-space: nowrap;
 }
 .Timeline .TimelineBar{
     display:inline-block;
     border:solid gray 1px;
+    position: relative;
+    height:2rem;
+}
+.Timeline .TimelineBar::before,
+.Timeline .TimelineBar::after{
+    content: '';
+    position:absolute;
+    left:0;
+    bottom: 0;
+    height: 50%;
+    width:25%;
+    border-right: solid gray 1px;
+}
+.Timeline .TimelineBar::after{
+    left:50%; 
+    border-left: solid gray 1px;
+    border-right: solid gray 1px;
 }
 
 .Timeline .Playhead{
